# rust-api-wrapper

./: Cargo.toml
src/: lib.rs  model.rs  using_custom_stream.rs  using_stream_ext.rs
