[package]
name = "rust-api-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "cookies"] } # make web-requests
serde = { version = "1.0.143", features = ["derive"] }            # seralization
serde_json = { version = "1.0.83" }                               # de-/serialize json data
tokio = { version = "1.20.1", features = ["rt", "macros"] }       # async runtime
futures = { version = "0.3.23" }                                  # concurrency helper
pin-project = { version = "1.0.12" }                              # pinning for futures
